# RuVector

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  hailo-backend-audit.yml  ruvllm-esp32-firmware.yml
crates/cognitum-gate-kernel/: Cargo.toml
crates/cognitum-gate-tilezero/: Cargo.toml
crates/hailort-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/hailort-sys/src/: lib.rs
crates/mcp-brain/: Cargo.toml
crates/mcp-brain-server/: Cargo.toml
crates/neural-trader-strategies/: Cargo.toml
crates/prime-radiant/: Cargo.toml
crates/ruos-thermal/: Cargo.toml
crates/ruos-thermal/.cargo/: config.toml
crates/ruos-thermal/deploy/: install.sh  ruos-thermal.service  ruos-thermal.timer
crates/ruos-thermal/src/: lib.rs  main.rs
crates/ruos-thermal/tests/: cli.rs
crates/ruvector-attention/: Cargo.toml
crates/ruvector-attention-node/: Cargo.toml
crates/ruvector-attention-unified-wasm/: Cargo.toml
crates/ruvector-attention-wasm/: Cargo.toml
crates/ruvector-attn-mincut/: Cargo.toml
crates/ruvector-bench/: Cargo.toml
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cluster/: Cargo.toml
crates/ruvector-cnn/: Cargo.toml
crates/ruvector-cnn-wasm/: Cargo.toml
crates/ruvector-coherence/: Cargo.toml
crates/ruvector-consciousness/: Cargo.toml
crates/ruvector-consciousness-wasm/: Cargo.toml
crates/ruvector-core/: Cargo.toml
crates/ruvector-crv/: Cargo.toml
crates/ruvector-dag-wasm/: Cargo.toml
crates/ruvector-decompiler/: Cargo.toml
crates/ruvector-delta-consensus/: Cargo.toml
crates/ruvector-delta-core/: Cargo.toml
crates/ruvector-delta-graph/: Cargo.toml
crates/ruvector-delta-index/: Cargo.toml
crates/ruvector-delta-wasm/: Cargo.toml
crates/ruvector-diskann/: Cargo.toml
crates/ruvector-dither/: Cargo.toml
crates/ruvector-domain-expansion/: Cargo.toml
crates/ruvector-domain-expansion-wasm/: Cargo.toml
crates/ruvector-economy-wasm/: Cargo.toml
crates/ruvector-exotic-wasm/: Cargo.toml
crates/ruvector-fpga-transformer/: Cargo.toml
crates/ruvector-fpga-transformer-wasm/: Cargo.toml
crates/ruvector-gnn-node/: Cargo.toml
crates/ruvector-gnn-wasm/: Cargo.toml
crates/ruvector-graph/: Cargo.toml
crates/ruvector-graph-node/: Cargo.toml
crates/ruvector-graph-transformer/: Cargo.toml
crates/ruvector-graph-transformer-node/: Cargo.toml
crates/ruvector-graph-transformer-wasm/: Cargo.toml
crates/ruvector-graph-wasm/: Cargo.toml
crates/ruvector-graph/benches/: graph_bench.rs
crates/ruvector-graph/src/: graph.rs  lib.rs  node.rs  storage.rs  transaction.rs
crates/ruvector-graph/src/cypher/: lexer.rs  optimizer.rs  semantic.rs
crates/ruvector-graph/src/executor/: operators.rs  parallel.rs  pipeline.rs  plan.rs  stats.rs
crates/ruvector-graph/src/hybrid/: cypher_extensions.rs  graph_neural.rs  mod.rs  rag_integration.rs  semantic_search.rs  vector_index.rs
crates/ruvector-graph/src/optimization/: adaptive_radix.rs  cache_hierarchy.rs  index_compression.rs  memory_pool.rs  query_jit.rs  simd_traversal.rs
crates/ruvector-hailo/: Cargo.toml  README.md  deny.toml
crates/ruvector-hailo-cluster/: BENCHMARK.md  build.rs  deny.toml
crates/ruvector-hailo/benches/: wordpiece_throughput.rs
crates/ruvector-hailo/models/: .gitignore  README.md
crates/ruvector-hailo/src/: cpu_embedder.rs  device.rs  error.rs  hef_embedder.rs  hef_embedder_pool.rs  hef_pipeline.rs  hef_verify.rs  host_embeddings.rs  inference.rs  lib.rs  tokenizer.rs
crates/ruvector-hailo/tests/: cpu_fallback_integration.rs  tokenizer_proptest.rs
crates/ruvector-kalshi/: Cargo.toml
crates/ruvector-learning-wasm/: Cargo.toml
crates/ruvector-math/: Cargo.toml
crates/ruvector-math-wasm/: Cargo.toml
crates/ruvector-mincut/: Cargo.toml
crates/ruvector-mincut-gated-transformer/: Cargo.toml
crates/ruvector-mincut-node/: Cargo.toml
crates/ruvector-mincut-wasm/: Cargo.toml
crates/ruvector-mmwave/: Cargo.toml  README.md
crates/ruvector-mmwave/src/: lib.rs
crates/ruvector-nervous-system/: Cargo.toml
crates/ruvector-node/: Cargo.toml
crates/ruvector-raft/: Cargo.toml
crates/ruvector-replication/: Cargo.toml
crates/ruvector-robotics/: Cargo.toml
crates/ruvector-router-core/: Cargo.toml
crates/ruvector-server/: Cargo.toml
crates/ruvector-snapshot/: Cargo.toml
crates/ruvector-solver/: Cargo.toml  build.rs
crates/ruvector-solver-node/: Cargo.toml
crates/ruvector-solver-wasm/: Cargo.toml
crates/ruvector-sparse-inference/: Cargo.toml
crates/ruvector-sparsifier/: Cargo.toml
crates/rvAgent/rvagent-a2a/: Cargo.toml
crates/rvAgent/rvagent-a2a/benches/: budget_ledger.rs  task_context.rs
crates/rvAgent/rvagent-a2a/src/: artifact_types.rs  budget.rs  client.rs  config.rs  context.rs  error.rs  executor.rs  identity.rs  lib.rs  policy.rs  recursion_guard.rs  routing.rs  types.rs
crates/rvAgent/rvagent-a2a/src/server/: json_rpc.rs  mod.rs  push.rs  sse.rs
crates/rvAgent/rvagent-a2a/tests/: artifact_kinds.rs  artifact_version_handshake.rs  budget_guard.rs  card_roundtrip.rs  card_signature.rs  circuit_breaker.rs  config_load.rs  dispatch_order.rs  executor_remote.rs  policy_guard.rs  push_ed25519.rs  push_rejected.rs  push_retry.rs  push_signing.rs  recursion_guard.rs  routing_selectors.rs  sse_backpressure.rs  sse_reconnect.rs  sse_stream.rs  task_cancel.rs  task_lifecycle.rs  trace_lineage.rs  witness_handoff.rs
crates/rvAgent/rvagent-a2a/tests/common/: mod.rs
examples/a2a-swarm/: .gitignore  Cargo.toml  README.md
examples/a2a-swarm/configs/: node-cheap.toml  node-fast.toml  node-router.toml
examples/a2a-swarm/src/: main.rs
examples/esp32-mmwave-sensor/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/esp32-mmwave-sensor/.cargo/: config.toml
examples/esp32-mmwave-sensor/src/: main.rs  selftest.rs
examples/ruvLLM/esp32-flash/: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/ruvLLM/esp32-flash/.cargo/: config.toml
examples/ruvLLM/esp32-flash/src/: main.rs
(+259 files in other folders)
