[package]
name = "hailort-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings for Hailo's HailoRT C library (ADR-167)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["hailo", "hailort", "ffi", "npu", "embedded"]
categories = ["external-ffi-bindings", "embedded"]
links = "hailort"      # tells cargo this crate links libhailort; prevents duplicate linkage

[features]
default = []
# `hailo` actually runs bindgen against the system <hailo/hailort.h> and
# links libhailort.so. Without it, the crate is an empty stub — useful for
# `cargo check` on x86 hosts without HailoRT installed.
hailo = []

# Iter 219 — rejoined the parent workspace. Closes ADR-178 Gap E
# (folded into Gap B). The standalone-workspace declaration was the
# blocker preventing `cargo build --workspace` from seeing this crate.
# `--features hailo` stays opt-in, so x86 stock workspace builds
# don't pull libhailort/bindgen.

[build-dependencies]
bindgen = "0.71"

[dependencies]
