[package]
name = "ruos-thermal"
version = "0.1.0"
edition = "2021"
description = "Pi 5 thermal supervisor + over/underclock control (ADR-174)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["ruos", "pi-5", "thermal", "overclock", "edge-ai"]
categories = ["hardware-support", "embedded"]

# Standalone — joins the workspace once a stable API lands.
[workspace]

[dependencies]
# Pure-Rust, zero deps for the skeleton; only stdlib + clap-style arg
# parsing inline. Adds tokio/serde when the Unix socket budget protocol
# lands in iter 92 of the ADR-174 roadmap.

[[bin]]
name = "ruos-thermal"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
