[package]
name = "ruvector-hailo"
version = "0.1.0"
edition = "2021"
description = "ruvector embedding backend for the Hailo-8 NPU (ADR-167)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["ruvector", "hailo", "npu", "embedding", "edge-ai"]
categories = ["embedded", "science"]
# Iter 202 — internal-only crate. Path dep on hailort-sys (in-tree
# FFI binding) means it can't be published to crates.io anyway, and
# leaving publish unset (= true) makes `cargo deny`'s allow-wildcard-
# paths refuse to honor the in-workspace wildcard exception.
publish = false

# `hailo` feature gates the actual NPU runtime path. Building without the
# feature compiles a stub that errors at runtime — useful for `cargo check`
# on x86 hosts and for compilation on devices without a Hailo HAT.
[features]
default = []
# Activates the real Hailo NPU runtime path — propagates to hailort-sys.
hailo = ["hailort-sys/hailo"]
# Iter 133 path-C: real BERT-6 inference on Cortex-A76 NEON / x86 AVX2
# via candle. Adds ~50 MB of compiled deps; off by default. When on,
# `HailoEmbedder::open` falls back to `CpuEmbedder` if no model.hef is
# found (and only the safetensors / tokenizer.json artifacts are
# present). Net: real semantic vectors today, NPU stays idle until HEF.
cpu-fallback = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "serde_json"]

# Iter 219 — rejoined the parent workspace. Closes ADR-178 Gap E
# (folded into Gap B). The iter-218 ruvector-core path dep made
# the standalone declaration both load-bearing AND inconsistent;
# rejoining lets `cargo build --workspace` exercise this crate
# without the hailo or cpu-fallback features pulling in any
# Pi-only deps.

[dependencies]
thiserror   = "2"
hailort-sys = { path = "../hailort-sys" }
# Iter 218 — closes ADR-178 Gap B (HIGH) part 1. Path dep on
# ruvector-core lets us implement the
# `ruvector_core::embeddings::EmbeddingProvider` trait against
# `HailoEmbedder`, which was the headline integration claim from
# ADR-167 §2.5 that never landed in the original "iter 14" plan.
# `default-features = false` keeps reqwest / ort / hnsw out of the
# Pi build — we only need the trait + error surface from this crate.
ruvector-core = { path = "../ruvector-core", default-features = false }
# Iter 174 — opt-in HEF sha256 pin via RUVECTOR_HEF_SHA256. Used only
# under `feature = "hailo"` (the only path that loads HEFs); see
# hef_pipeline.rs. Keep default-features off to inherit the same
# minimal sha2 surface the cluster crate uses.
sha2        = { version = "0.10", default-features = false }
# Iter 133 path-C deps (cpu-fallback feature). All optional so the
# default build doesn't pull them in. candle-transformers brings BERT
# + sentence-transformers support; tokenizers is HuggingFace's fast
# WordPiece/BPE crate.
candle-core         = { version = "0.8", optional = true, default-features = false }
candle-nn           = { version = "0.8", optional = true, default-features = false }
candle-transformers = { version = "0.8", optional = true, default-features = false }
tokenizers          = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
serde_json          = { version = "1", optional = true }

[dev-dependencies]
anyhow    = "1"
proptest  = "1"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name    = "wordpiece_throughput"
harness = false
