[package]
name = "a2a-swarm"
version = "0.1.0"
edition = "2021"
description = "rvAgent A2A swarm demo — three rvagent-cli nodes + a router dispatching tasks end-to-end over HTTP"
license = "MIT OR Apache-2.0"
publish = false

# Orchestrator binary — spawns three `rvagent` child processes, pokes them
# over HTTP via the CLI's own `a2a discover` / `a2a send-task` subcommands,
# then shuts them down cleanly.
[[bin]]
name = "a2a-swarm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "process", "io-util", "time", "signal", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = { workspace = true }

# The demo driver shells out to the `rvagent` binary built from the
# sibling crate. Declaring it as a runtime dependency here ensures
# `cargo run -p a2a-swarm` triggers its build first.
rvagent-cli = { path = "../../crates/rvAgent/rvagent-cli" }
