# Standalone — not part of the parent workspace; uses the `esp` Rust
# toolchain (Xtensa) and esp-idf via esp-idf-{svc,hal,sys}.
[workspace]

[package]
name        = "ruvector-mmwave-sensor"
version     = "0.0.1"
edition     = "2021"
description = "ESP32-S3 firmware reading a Seeed MR60BHA2 60 GHz mmWave radar over UART (ADR-063 + RuView ADR-SYS-0024)"
license     = "MIT OR Apache-2.0"
publish     = false

[[bin]]
name = "ruvector-mmwave-sensor"
path = "src/main.rs"

[dependencies]
# ESP-IDF integration. Pin to the same versions the existing
# examples/ruvLLM/esp32-flash project uses so we share build cache.
esp-idf-svc = { version = "0.51", default-features = false, features = ["std"] }
esp-idf-hal = { version = "0.45", default-features = false, features = ["std"] }
esp-idf-sys = { version = "0.36", default-features = false, features = ["binstart"] }
log         = "0.4"
anyhow      = "1"
# Iter 115: shared mmWave parser crate. no_std + zero-allocation, fits
# cleanly into the ESP32-S3 firmware image. Same source the host-side
# bridge consumes — one tested state machine, two callers.
ruvector-mmwave = { path = "../../crates/ruvector-mmwave" }

[build-dependencies]
embuild = "0.33"

# Iter A bring-up profile: opt-level=z to fit comfortably under 16 MB
# flash with mbedtls headroom for iter B; keep panics→abort to shrink the
# image and surface fatal radar parse errors in journalctl-style logs.
[profile.release]
opt-level    = "z"
lto          = "fat"
codegen-units = 1
panic        = "abort"
strip        = "symbols"
debug        = false

[profile.dev]
opt-level    = "s"
debug        = 1
