[package]
name = "rvagent-a2a"
version = "0.1.0"
edition = "2021"
description = "rvAgent A2A — Agent2Agent peer-to-peer protocol (ADR-159)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/RuVector"

[dependencies]
# Intra-workspace rvAgent crates
rvagent-core = { path = "../rvagent-core" }
rvagent-middleware = { path = "../rvagent-middleware" }

# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

# HTTP + transport
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Crypto + identity (r2)
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha3 = "0.10"
# OsRng for Ed25519 webhook keypair generation (feature = "ed25519-webhooks").
rand_core = { version = "0.6", features = ["getrandom"] }

# HMAC-SHA256 push webhook signing (M4)
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
base64 = "0.22"

# Streaming + utility
bytes = "1"
futures = { workspace = true }

# Config (r3)
toml = "0.8"

# r2/r3 optimizations
parking_lot = { workspace = true }
hex = "0.4"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
axum-test = "16"
tempfile = "3.14"
tokio-test = "0.4"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
criterion = { workspace = true }
rayon = { workspace = true }

[features]
# Push-notification webhooks also signed with an Ed25519 keypair, emitted
# alongside the HMAC signature under `X-A2A-Signature-Ed25519`. Off by
# default per ADR-159 M4 open question #3; HMAC is the baseline.
ed25519-webhooks = []

[[bench]]
name = "budget_ledger"
harness = false

[[bench]]
name = "task_context"
harness = false
